RESOLVED FIXED75715
[Chromium] Crash when using per-tile painting on Windows.
https://bugs.webkit.org/show_bug.cgi?id=75715
Summary [Chromium] Crash when using per-tile painting on Windows.
David Reveman
Reported 2012-01-06 10:48:44 PST
Attachments
Patch (4.05 KB, patch)
2012-02-03 18:37 PST, David Reveman
no flags
Patch (4.38 KB, patch)
2012-02-06 13:00 PST, David Reveman
no flags
David Reveman
Comment 1 2012-01-06 10:51:18 PST
Temporary patch to avoid the crash until this issue is solved: https://bugs.webkit.org/show_bug.cgi?id=75705
David Reveman
Comment 2 2012-02-03 18:37:45 PST
James Robinson
Comment 3 2012-02-03 19:33:47 PST
I thought there was work underway in Skia to avoid needing a GDI-backed canvas at all on windows for the SkPicture playback path. What's the status of that?
David Reveman
Comment 4 2012-02-03 19:55:33 PST
(In reply to comment #3) > I thought there was work underway in Skia to avoid needing a GDI-backed canvas at all on windows for the SkPicture playback path. What's the status of that? I'm not aware of that but that would be great! Can we land this patch for now to fix the crash? I'm happy to implement non GDI-backed canvas use if possible in a separate patch.
David Reveman
Comment 5 2012-02-06 13:00:05 PST
David Reveman
Comment 6 2012-02-06 13:08:45 PST
New patch avoids the PlatformCanvas API completely and this seem to be working fine.
James Robinson
Comment 7 2012-02-06 13:09:05 PST
Comment on attachment 125696 [details] Patch R=me
WebKit Review Bot
Comment 8 2012-02-07 15:30:13 PST
Comment on attachment 125696 [details] Patch Clearing flags on attachment: 125696 Committed r106997: <http://trac.webkit.org/changeset/106997>
WebKit Review Bot
Comment 9 2012-02-07 15:30:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.