[Chromium] Crash when using per-tile painting on Windows. https://bugs.webkit.org/show_bug.cgi?id=75715

Patch by David Reveman <reveman@chromium.org> on 2012-02-07
Reviewed by James Robinson.

PlatformCanvas constructor on win32 expects forth argument to be a
shared section handle. Passing a pointer to a system memory causes
it to crash. Fix this by not using the PlatformCanvas API for
SkCanvas construction in per-tile texture uploader.

Tested with manual tests.

* platform/graphics/chromium/BitmapSkPictureCanvasLayerTextureUpdater.cpp:
(WebCore::BitmapSkPictureCanvasLayerTextureUpdater::Texture::prepareRect):
(WebCore::BitmapSkPictureCanvasLayerTextureUpdater::Texture::updateRect):
* platform/graphics/chromium/BitmapSkPictureCanvasLayerTextureUpdater.h:
(Texture):

Canonical link: https://commits.webkit.org/94913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106997 268f45cc-cd09-0410-ab3c-d52691b4dbfc